--- a/src/project/fxml/History.fxml
+++ b/src/project/fxml/History.fxml
@@ -1,30 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Rectangle2D?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="AnchorPaneMain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.controllers.HistoryController">
+<AnchorPane fx:id="AnchorPaneMain" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.controllers.HistoryController">
    <children>
-      <AnchorPane prefHeight="150.0" prefWidth="800.0" style="-fx-background-color: FF847F;">
+      <AnchorPane layoutY="-1.0" prefHeight="150.0" prefWidth="800.0" style="-fx-background-color: FF847F;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-1.0">
          <children>
             <Label layoutX="349.0" layoutY="92.0" text="Historia" textFill="#575757">
                <font>
                   <Font size="30.0" />
                </font>
             </Label>
-            <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="756.0" layoutY="14.0" onMouseClicked="#closeAction" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="756.0" layoutY="14.0" onMouseClicked="#closeAction" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
                <image>
                   <Image url="@../images/icons8_close_window_50px.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="726.0" layoutY="14.0" onMouseClicked="#maxAction" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="726.0" layoutY="14.0" onMouseClicked="#maxAction" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="44.0" AnchorPane.topAnchor="14.0">
                <image>
                   <Image url="@../images/icons8_maximize_window_50px.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="696.0" layoutY="14.0" onMouseClicked="#minAction" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="696.0" layoutY="14.0" onMouseClicked="#minAction" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="74.0" AnchorPane.topAnchor="14.0">
                <image>
                   <Image url="@../images/icons8_minimize_window_50px.png" />
                </image>
@@ -48,38 +53,41 @@
                <image>
                   <Image url="@../images/icons8_calendar_100px.png" />
                </image>
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
             </ImageView>
          </children>
       </AnchorPane>
-      <Pane layoutY="150.0" prefHeight="450.0" prefWidth="800.0">
+      <AnchorPane layoutY="150.0" prefHeight="450.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="150.0">
          <children>
-            <DatePicker fx:id="datePicker" layoutX="98.0" layoutY="86.0" minHeight="-Infinity" onAction="#show_information" prefHeight="30.0" prefWidth="182.0" promptText="dd-MM-yyyy" styleClass="data" stylesheets="@../styles/login.css" />
-            <Text fill="#575757" layoutX="340.0" layoutY="112.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ilość testów">
+            <DatePicker fx:id="datePicker" layoutX="93.0" layoutY="89.0" minHeight="-Infinity" onAction="#show_information" prefHeight="30.0" prefWidth="182.0" promptText="dd-MM-yyyy" styleClass="data" stylesheets="@../../../../java%20projekt_backup/src/project/styles/login.css" />
+            <Text fill="#575757" layoutX="375.0" layoutY="289.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ilość testów">
                <font>
                   <Font size="30.0" />
                </font>
             </Text>
-            <Text fill="#575757" layoutX="340.0" layoutY="236.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Średni wynik">
+            <Text fill="#575757" layoutX="369.0" layoutY="117.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Średni wynik">
                <font>
                   <Font size="30.0" />
                </font>
             </Text>
-            <Text fx:id="Test" fill="#575757" layoutX="604.0" layoutY="113.0" strokeType="OUTSIDE" strokeWidth="0.0">
+            <Text fx:id="Test" fill="#575757" layoutX="682.0" layoutY="296.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="5.800048828125">
                <font>
                   <Font size="30.0" />
                </font>
             </Text>
-            <Text fx:id="score" fill="#575757" layoutX="592.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0">
+            <Text fx:id="score" fill="#575757" layoutX="684.0" layoutY="116.0" strokeType="OUTSIDE" strokeWidth="0.0">
                <font>
                   <Font size="30.0" />
                </font>
             </Text>
-            <Button alignment="CENTER" layoutX="662.0" layoutY="393.0" mnemonicParsing="false" onAction="#go_menu" prefHeight="30.0" prefWidth="97.0" style="-fx-background-color: #FF847F; -fx-background-radius: 15;" text="Powrót" textFill="#575757">
+            <Button alignment="CENTER" layoutX="688.0" layoutY="391.0" mnemonicParsing="false" onAction="#go_menu" prefHeight="30.0" prefWidth="97.0" style="-fx-background-color: #FF847F; -fx-background-radius: 15;" text="Powrót" textFill="#575757">
                <font>
                   <Font name="Arial" size="12.0" />
                </font>
             </Button>
          </children>
-      </Pane>
+      </AnchorPane>
    </children>
 </AnchorPane>
